copy cleanup changes from manager-4.3 https://github.com/SUSE/spacewalk/issues/23003

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -15,9 +15,9 @@ Before you begin, ensure you have:
 
 All files must be in PEM format.
 
-The host name of the SSL server certificate must match the fully qualified host name of the machine you deploy them on.
-You can set the host names in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
-You can also list multiple host names if your environment requires it.
+The hostname of the SSL server certificate must match the fully qualified hostname of the machine you deploy them on.
+You can set the hostnames in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
+You can also list multiple hostnames if your environment requires it.
 Supported Key types are [literal]``RSA`` and [literal]``EC`` (Elliptic Curve).
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
@@ -33,7 +33,7 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Server
 
-. Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+. Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:install-server.adoc[].
   Make sure to pass the correct files as parameters to [literal]``mgradm install podman``.
   The parameters are:
 +
@@ -54,18 +54,19 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Proxy
 
-. Install the {productname} Proxy according to the instructions in xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc[].
+. Install the {productname} Proxy according to the instructions in xref:installation-and-upgrade:install-proxy.adoc[].
 . Follow the prompts to complete setup.
 
 
 [NOTE]
 ====
-Use the same certificate authority to sign all server certificates for servers and proxies.
+Use the same certificate authority (CA) to sign all server certificates for servers and proxies.
 Certificates signed with different CAs do not match.
 ====
 
 
 
+[[ssl-certs-import-replace]]
 == Replace Certificates
 
 
@@ -118,7 +119,7 @@ mgradm restart
 ----
 
 
-If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
+If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
 Generate a new configuration tarball and deploy it:
 
 ifeval::[{suma-content} == true]
@@ -132,6 +133,11 @@ endif::[]
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
+
+
+=== Deploy the Root CA on Salt Clients
+
+If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
 
 .Procedure: Deploying the Root CA on Salt Clients
