--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -57,7 +57,7 @@ endif::[]
 *** xref:auditing.adoc[Auditing Packages]
 ** xref:ssl-certs.adoc[SSL Certificates]
 *** xref:ssl-certs-selfsigned.adoc[Self-Signed SSL Certificates]
-*** xref:ssl-certs-imported.adoc[Imported SSL Certificates]
+*** xref:ssl-certs-imported.adoc[Import SSL Certificates]
 *** xref:ssl-certs-hsts.adoc[HTTP Strict Transport Security]
 ** xref:subscription-matching.adoc[Subscription Matching]
 ** xref:task-schedules.adoc[Task Schedules]
