Apply suggestions from code review

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -35,7 +35,7 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Server
 
-. Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:install-server.adoc[].
+Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
   Make sure to pass the correct files as parameters to [literal]``mgradm install podman``.
   The parameters are:
 +
@@ -56,7 +56,7 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Proxy
 
-. Install the {productname} Proxy according to the instructions in xref:installation-and-upgrade:install-proxy.adoc[].
+. Install the {productname} Proxy according to the instructions in xref:installation-and-upgrade:container-deployment/suma/proxy-deployment-suma.adoc[].
 . Follow the prompts to complete setup.
 
 
