--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -35,7 +35,7 @@ After you have completed the initial setup, you can replace the default certific
 
 .Procedure: Import Certificates on a New {productname} Server
 
-Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+. Deploy the {productname} Server according to the instructions in xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
   Make sure to pass the correct files as parameters to [literal]``mgradm install podman``.
   The parameters are:
 +
