--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -15,9 +15,9 @@ Before you begin, ensure you have:
 
 All files must be in PEM format.
 
-The host name of the SSL server certificate must match the fully qualified host name of the machine you deploy them on.
-You can set the host names in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
-You can also list multiple host names if your environment requires it.
+The hostname of the SSL server certificate must match the fully qualified hostname of the machine you deploy them on.
+You can set the hostnames in the [literal]``X509v3 Subject Alternative Name`` section of the certificate.
+You can also list multiple hostnames if your environment requires it.
 Supported Key types are [literal]``RSA`` and [literal]``EC`` (Elliptic Curve).
 
 Third-party authorities commonly use intermediate CAs to sign requested server certificates.
@@ -62,12 +62,13 @@ After you have completed the initial setup, you can replace the default certific
 
 [NOTE]
 ====
-Use the same certificate authority to sign all server certificates for servers and proxies.
+Use the same certificate authority (CA) to sign all server certificates for servers and proxies.
 Certificates signed with different CAs do not match.
 ====
 
 
 
+[[ssl-certs-import-replace]]
 == Replace Certificates
 
 
@@ -120,7 +121,7 @@ mgradm restart
 ----
 
 
-If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
+If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their hostnames and cnames.
 Generate a new configuration tarball and deploy it:
 
 ifeval::[{suma-content} == true]
@@ -134,6 +135,11 @@ endif::[]
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
+
+
+=== Deploy the Root CA on Salt Clients
+
+If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
 
 .Procedure: Deploying the Root CA on Salt Clients
